@@ -59,6 +59,7 @@ Container/Image/SCM/Signature
 Adapter precondition and routing
 - ADAPTER_UNSUPPORTED
 - ADAPTER_PRECONDITION_FAILED
+- ADAPTER_PLUGIN_UNKNOWN
 - IAC_UNSUPPORTED_FORMAT
 - DOC_UNSUPPORTED_FORMAT
 - IMAGE_UNSUPPORTED_FORMAT
